phase2_Dev/src/objects/Login_History__c.object
<CustomObject>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginTime__c</fullName>
        <label>LoginTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginType__c</fullName>
        <label>LoginType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Login History</label>
    <nameField>
        <label>Login History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>